# playground

./: .pre-commit-config.yaml  LICENSE  foo.py  pyproject.toml  tests.py  tox.ini
.github/workflows/: test.yml
maxbot_playground/: __init__.py  bar.py  cli.py
tests/: test_bar.py  test_cli.py  test_foo.py  test_main.py
